@@ -113,3 +113,12 @@ void test(void)
 }
 
 #endif
+
+/* bug 3086: SDCC had infinite loop on this error */
+#ifdef TEST9
+struct tag1 {
+  union {
+    struct tag2;	/* ERROR(SDCC) */ /* IGNORE(GCC) */
+  } tag3;		/* IGNORE */
+};
+#endif
