@@ -1,3 +1,7 @@
+2021-07-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/valdiags/tests/struct.c: add test for bug #3086
+
 2021-07-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/tests/bug-3141.c: reenable for mcs51
